<resources>
    <string name="app_name">Foody</string>
    <string name="recipes">Recipes</string>
    <string name="favorite">Favorite</string>
    <string name="food_joke">Food Joke</string>
    <string name="filter">Filter</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>

    <!--    Categories Meal Type -->
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>

    <!--    Categories Diet Type -->
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="recipe_not_found">Recipe not found</string>
    <string name="api_key_limited">API key limited</string>
    <string name="response_is_not_found">Response is not found</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="save_to_favorite">Save to Favorite</string>
    <string name="no_favorite_recipes">No Favorite Recipes</string>
    <string name="delete">Delete</string>
    <string name="delete_favorite_item">Delete Favorite Item</string>
    <string name="delete_all_recipes">Delete All Recipes</string>
    <string name="all_favorite_recipes_deleted">All favorite recipes deleted</string>

    <string name="lorem_ipsum">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="error_getting_a_joke">Error getting a joke</string>
    <string name="type_of_title">Type of title</string>

</resources>