<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.main.fragment.recipes.RecipeBottomSheet"
    >

    <TextView
        android:id="@+id/meal_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin_large"
        android:layout_marginTop="16dp"
        android:text="@string/meal_type"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <HorizontalScrollView
        android:id="@+id/meal_type_scroll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin_medium"
        android:layout_marginTop="@dimen/app_margin_medium"
        android:layout_marginEnd="@dimen/app_margin_medium"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meal_type_text"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/meal_type_chip_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@id/main_course_chip"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true"
                >

                <com.google.android.material.chip.Chip
                    android:id="@+id/main_course_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_course"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/side_dish_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/side_dish"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/dessert_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dessert"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/appetizer_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appetizer"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/salad_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salad"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/bread_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bread"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/breakfast_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/soup_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soup"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/beverage_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beverage"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/sauce_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sauce"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/marinade_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marinade"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/fingerfood_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fingerfood"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/snack_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snack"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/drink_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drink"
                    />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/diet_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin_large"
        android:layout_marginTop="@dimen/app_margin_medium"
        android:text="@string/diet_type"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meal_type_scroll"
        />

    <HorizontalScrollView
        android:id="@+id/diet_type_scroll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin_medium"
        android:layout_marginTop="@dimen/app_margin_medium"
        android:layout_marginEnd="@dimen/app_margin_medium"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diet_type_text"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/diet_type_chip_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@id/gluten_free_chip"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true"
                >

                <com.google.android.material.chip.Chip
                    android:id="@+id/gluten_free_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gluten_free"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ketogenic_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ketogenic"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/vegetarian_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegetarian"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/vegan_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegan"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/pescetarian_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pescetarian"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/paleo_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paleo"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/primal_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/primal"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/whole30_chip"
                    style="@style/CustomChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whole30"
                    />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/apply_button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_margin="@dimen/app_margin_large"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diet_type_scroll"
        />
</androidx.constraintlayout.widget.ConstraintLayout>