<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    app:layoutDescription="@xml/fragment_overview_scene"
    tools:context=".ui.details.overview.OverviewFragment"
    >

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        />

    <View
        android:id="@+id/gradient_overlay"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@id/main_image"
        app:layout_constraintEnd_toEndOf="@id/main_image"
        app:layout_constraintStart_toStartOf="@id/main_image"
        app:layout_constraintTop_toTopOf="@id/main_image"
        app:layout_constraintVertical_bias="1"
        />

    <LinearLayout
        android:id="@+id/time_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/app_margin_medium"
        android:layout_marginBottom="@dimen/app_margin_medium"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/main_image"
        app:layout_constraintEnd_toEndOf="@id/gradient_overlay"
        >

        <ImageView
            android:id="@+id/time_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clock"
            app:tint="@color/white"
            />

        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="45"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/time_group"
        app:layout_constraintTop_toTopOf="@id/time_group"
        >

        <ImageView
            android:id="@+id/like_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_heart"
            app:layout_constraintBottom_toTopOf="@id/like_text"
            app:layout_constraintEnd_toEndOf="@id/like_text"
            app:layout_constraintStart_toStartOf="@id/like_text"
            app:tint="@color/white"
            />

        <TextView
            android:id="@+id/like_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/app_margin_medium"
            android:text="100"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/time_text"
            app:layout_constraintEnd_toStartOf="@id/time_text"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/app_margin_medium"
        android:fontFamily="@font/courgette"
        android:text="@string/type_of_title"
        android:textColor="@color/titleColor"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/main_image"
        />

    <ImageView
        android:id="@+id/vegetarian_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin_medium"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@id/title_text"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:tint="@color/itemColor"
        />

    <TextView
        android:id="@+id/vegetarian_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vegetarian"
        app:layout_constraintBottom_toBottomOf="@id/vegetarian_image"
        app:layout_constraintStart_toEndOf="@id/vegetarian_image"
        app:layout_constraintTop_toTopOf="@id/vegetarian_image"
        />

    <ImageView
        android:id="@+id/vegan_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin_medium"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@id/vegetarian_image"
        app:layout_constraintTop_toBottomOf="@id/vegetarian_image"
        app:tint="@color/itemColor"
        />

    <TextView
        android:id="@+id/vegan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vegan"
        app:layout_constraintBottom_toBottomOf="@id/vegan_image"
        app:layout_constraintStart_toEndOf="@id/vegan_image"
        app:layout_constraintTop_toTopOf="@id/vegan_image"
        />

    <ImageView
        android:id="@+id/gluten_free_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin_large"
        android:layout_marginTop="@dimen/app_margin_medium"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toEndOf="@id/vegetarian_text"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:tint="@color/itemColor"
        />

    <TextView
        android:id="@+id/gluten_free_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gluten_free"
        app:layout_constraintBottom_toBottomOf="@id/gluten_free_image"
        app:layout_constraintStart_toEndOf="@id/gluten_free_image"
        app:layout_constraintTop_toTopOf="@id/gluten_free_image"
        />

    <ImageView
        android:id="@+id/dairy_free_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin_medium"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@id/gluten_free_image"
        app:layout_constraintTop_toBottomOf="@id/gluten_free_image"
        app:tint="@color/itemColor"
        />

    <TextView
        android:id="@+id/dairy_free_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dairy_free"
        app:layout_constraintBottom_toBottomOf="@id/dairy_free_image"
        app:layout_constraintStart_toEndOf="@id/dairy_free_image"
        app:layout_constraintTop_toTopOf="@id/dairy_free_image"
        />

    <ImageView
        android:id="@+id/healthy_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin_large"
        android:layout_marginTop="@dimen/app_margin_medium"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toEndOf="@id/gluten_free_text"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:tint="@color/itemColor"
        />

    <TextView
        android:id="@+id/healthy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/healthy"
        app:layout_constraintBottom_toBottomOf="@id/healthy_image"
        app:layout_constraintStart_toEndOf="@id/healthy_image"
        app:layout_constraintTop_toTopOf="@id/healthy_image"
        />

    <ImageView
        android:id="@+id/cheap_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin_medium"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="@id/healthy_image"
        app:layout_constraintTop_toBottomOf="@id/healthy_image"
        app:tint="@color/itemColor"
        />

    <TextView
        android:id="@+id/cheap_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheap"
        app:layout_constraintBottom_toBottomOf="@id/cheap_image"
        app:layout_constraintStart_toEndOf="@id/cheap_image"
        app:layout_constraintTop_toTopOf="@id/cheap_image"
        />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/app_margin_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/vegan_image"
        tools:ignore="SpeakableTextPresentCheck"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/summary_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tools:text="TextView"
                />
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/app_margin_medium"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/app_margin_medium"
        />

</androidx.constraintlayout.motion.widget.MotionLayout>